# serializer version: 1
# name: test_json_extract_inner_path[session-tracked-async-aiosqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_inner_path[session-tracked-async-asyncmy_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> %s, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_inner_path[session-tracked-async-asyncpg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST($1 AS JSONPATH)), CAST($2::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_inner_path[session-tracked-async-psycopg_async_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_inner_path[session-tracked-sync-psycopg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_inner_path[session-tracked-sync-sqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-asyncpg_engine]
  '''
  SELECT json_model.id,
         jsonb_path_query_first(json_model.dict_col, CAST($1 AS JSONPATH)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key1-aiosqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key1-asyncmy_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> %s, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key1-asyncpg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST($1 AS JSONPATH)), CAST($2::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key1-psycopg_async_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key3-aiosqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key3-asyncmy_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> %s, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key3-asyncpg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST($1 AS JSONPATH)), CAST($2::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key3-psycopg_async_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key4-aiosqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key4-asyncmy_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> %s, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key4-asyncpg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST($1 AS JSONPATH)), CAST($2::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-key4-psycopg_async_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-nested-aiosqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-nested-asyncmy_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> %s, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-nested-asyncpg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST($1 AS JSONPATH)), CAST($2::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-nested-psycopg_async_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-async-psycopg_async_engine]
  '''
  SELECT json_model.id,
         jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-key1-psycopg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-key1-sqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-key3-psycopg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-key3-sqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-key4-psycopg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-key4-sqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-nested-psycopg_engine]
  '''
  SELECT json_model.id,
         coalesce(jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)), CAST(%(param_2)s::JSONB AS JSONB)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-nested-sqlite_engine]
  '''
  SELECT json_model.id,
         coalesce(json_model.dict_col -> ?, json_object()) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_extract_path[session-tracked-sync-psycopg_engine]
  '''
  SELECT json_model.id,
         jsonb_path_query_first(json_model.dict_col, CAST(%(param_1)s AS JSONPATH)) AS json_model__dict_col
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-containedIn-asyncmy_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_contains(CAST(%s AS JSON), json_model.dict_col)
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-containedIn-asyncpg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col <@ $1::
   JSONB
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-containedIn-psycopg_async_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col <@ %(param_1)s::
   JSONB
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-contains-asyncmy_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_contains(json_model.dict_col, CAST(%s AS JSON))
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-contains-asyncpg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col @> $1::
   JSONB
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-contains-psycopg_async_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col @> %(param_1)s::
   JSONB
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKey-aiosqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_extract(json_model.dict_col, ?) IS NOT NULL
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKey-asyncmy_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_contains_path(json_model.dict_col, %s, %s)
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKey-asyncpg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? $1::VARCHAR
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKey-psycopg_async_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? %(param_1)s::VARCHAR
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAll-aiosqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_extract(json_model.dict_col, ?) IS NOT NULL
     AND json_extract(json_model.dict_col, ?) IS NOT NULL
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAll-asyncmy_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_contains_path(json_model.dict_col, %s, %s, %s)
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAll-asyncpg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? & CAST($1::TEXT[] AS TEXT[])
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAll-psycopg_async_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? & CAST(%(param_1)s::TEXT[] AS TEXT[])
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAny-aiosqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_extract(json_model.dict_col, ?) IS NOT NULL
      OR json_extract(json_model.dict_col, ?) IS NOT NULL
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAny-asyncmy_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_contains_path(json_model.dict_col, %s, %s, %s)
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAny-asyncpg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? | CAST($1::TEXT[] AS TEXT[])
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-async-hasKeyAny-psycopg_async_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? | CAST(%(param_1)s::TEXT[] AS TEXT[])
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-containedIn-psycopg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col <@ %(param_1)s::
   JSONB
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-contains-psycopg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col @> %(param_1)s::
   JSONB
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-hasKey-psycopg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? %(param_1)s::VARCHAR
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-hasKey-sqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_extract(json_model.dict_col, ?) IS NOT NULL
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-hasKeyAll-psycopg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? & CAST(%(param_1)s::TEXT[] AS TEXT[])
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-hasKeyAll-sqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_extract(json_model.dict_col, ?) IS NOT NULL
     AND json_extract(json_model.dict_col, ?) IS NOT NULL
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-hasKeyAny-psycopg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_model.dict_col ? | CAST(%(param_1)s::TEXT[] AS TEXT[])
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_filters[session-tracked-sync-hasKeyAny-sqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   WHERE json_extract(json_model.dict_col, ?) IS NOT NULL
      OR json_extract(json_model.dict_col, ?) IS NOT NULL
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_output[session-tracked-async-aiosqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_output[session-tracked-async-asyncmy_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_output[session-tracked-async-asyncpg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_output[session-tracked-async-psycopg_async_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_output[session-tracked-sync-psycopg_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
# name: test_json_output[session-tracked-sync-sqlite_engine]
  '''
  SELECT json_model.dict_col,
         json_model.id
    FROM json_model AS json_model
   ORDER BY json_model.id ASC
  '''
# ---
